--- a/app/components/preloader/Preloader.scss
+++ b/app/components/preloader/Preloader.scss
@@ -17,7 +17,7 @@
     }
     .logo {
         font-family: var(--font-ephesis);
-        font-size: 250px;
+        font-size: clamp(120px, 120px + (250 - 120) * ((100vw - 768px) / (1440 - 768)), 250px);
         opacity: 0;
         transition: opacity 0.8s ease-out;
         &.show {
