--- a/app/page.scss
+++ b/app/page.scss
@@ -235,8 +235,7 @@
                 gap: 30px;
                 .item {
                     display: flex;
-                    align-items: center;
-                    gap: 30px;
+                    gap:10px;
                     opacity: 0;
                     transform: translateY(20px);
                     transition: opacity 0.8s ease-out, transform 0.8s ease-out;
